<resources>
    <string name="app_name">Happitat</string>
    <string name="example"><u>Pick Date</u></string>
    <string name="title_calender">Calendar</string>
    <string name="title_shopping">Shopping</string>
    <string name="title_doc">Kitchen documents</string>
    <string name="title_foodclub">Foodclub</string>
    <string name="title_more">More</string>
    <string name="title_meeting">Meetings</string>
    <string name="title_cleaning">Kitchen Cleaning</string>
    <string name="title_rules">Rules</string>
    <string name="title_profile">My Profile</string>
    <string name="title_inventory">Inventory Shopping</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="spinner">
        <item>Roomnumber</item>
        <item>901</item>
        <item>902</item>
        <item>903</item>
        <item>904</item>
        <item>905</item>
        <item>906</item>
        <item>907</item>
        <item>908</item>
        <item>909</item>
        <item>910</item>
        <item>911</item>
        <item>912</item>
        <item>913</item>
        <item>914</item>
        <item>915</item>
        <item>916</item>
        <item>917</item>
    </string-array>
    <string-array name="spinner_cooks">
        <item>None</item>
        <item>901</item>
        <item>902</item>
        <item>903</item>
        <item>904</item>
        <item>905</item>
        <item>906</item>
        <item>907</item>
        <item>908</item>
        <item>909</item>
        <item>910</item>
        <item>911</item>
        <item>912</item>
        <item>913</item>
        <item>914</item>
        <item>915</item>
        <item>916</item>
        <item>917</item>
    </string-array>

    <!-- cleaning task -->
    <string name="promtA">Wash the floor – also underneath boxes and waste bins</string>
    <string name="promtB">Empty the vacuum cleaner and put in a new “dust bag”</string>
    <string name="promtC">Clean the ovens and the stove. Also clean the racks and the drawer underneath the oven.</string>
    <string name="promtD">All food without a name on it has to be thrown away, or the owner has to be found.</string>
    <string name="promtE">Clean the drains</string>
    <string name="promtF">Empty and clean all the kitchen shelves, drawers and cabinets</string>
    <string name="promtG">Tidy up the storage room (it’s the small room with the drying racks and the electrical fuse box)</string>
    <string name="promtH">Clean the cooker hoot and the filters</string>
    <string name="promtI">Dust the kitchen (windowsill, wooden strips, loudspeakers, lamps and above the kitchen cabinets)</string>
    <string name="promtJ">Clean the room with the all the refrigerators</string>
    <string name="promtK">Clean the shared refrigerator and the room</string>

    <string name="prompt1">Clean the tables and clear/throw away everything except todays newspaper</string>
    <string name="prompt2">Descale the water boiler and coffee maker</string>
    <string name="prompt3">Throw paper and bottles in the container at the main entrance. Get rid of the pant and use the money for bullet 13. And 14. Put the money leftover in the metalbowl. </string>
    <string name="prompt4">Clean the kitchen cabinets under the sinks and the cabinet doors around the waste bin (remember 		to clean the big white bins under the shelf)</string>
    <string name="prompt5">Do the dishes or find the owner</string>
    <string name="prompt6">Clean the toaster, sandwich toaster and microwave</string>
    <string name="prompt7">Clean the onion box</string>
    <string name="prompt8">Wash the dishcloths, floor cloths, towels, tea towels and pot holders (wash on 90⁰ without fabric 		softener)</string>
    <string name="prompt9">Tidy up the kitchen</string>
    <string name="prompt10">Pick up waste bags, light bulbs and fuses at the caretaker (if any of these are missing)</string>
    <string name="prompt11">Wash the white kitchen tiles and the pan rack</string>
    <string name="prompt12">Sweep/vacuum the floor</string>
    <string name="prompt13">Buy spices if needed (salt, pepper, garlic, etc)</string>
    <string name="prompt14">Buy more soap etc if needed in the kithen</string>
    <string name="prompt15">903 (Jesper) must be informed when finished or you will be cleaning again the following week.</string>

    <!-- Dialog -->
    <string name="dialogTitle">Delete File</string>
    <string name="dialogMessage">Are you sure you yo delete file? </string>
    <string name="dialogTitleSignOut">Signing out</string>
    <string name="dialogMessageSignOut">Are you sure you want to sign out? </string>
    <string name="dialogTitleDelete">Deleting Account</string>
    <string name="dialogMessageDelete">Are you sure you want to delete account for good? </string>

    <string name="helpDialogTitleCleaning">Welcome to cleaning schedule</string>
    <string name="helpDialogTitleFoodclub">Welcome to foodclub schedule</string>
    <string name="helpDialogTitleRules">Welcome to rules overview</string>
    <string name="helpDialogTitleResident">Welcome to residents</string>
    <string name="helpDialogTitleMeetings">Welcome to meeting agendas</string>
    <string name="helpDialogTitleInventory">Welcome to inventory shopping</string>
    <string name="helpDialogTitleGrocery">Welcome to grocery shopping</string>
    <string name="helpDialogTitleSum">Welcome to kitchen documents</string>

    <string name="helpDialogMsgCleaning">On this page you can get an overview of all the planned cleanings as well as create new ones or edit the existings ones.
 Click on the details icon, to go to the details page. Here you are shown the tasks of the cleaning as well as who is cleaning, date and wheter is has been checked.</string>
    <string name="helpDialogMsgFoodclub">On this page you can get an overview of all the planned foodclubs as well as create new ones or edit the existings ones.
 Click on the details icon, to go to the details page. Here you can see who is cooking, what they are cooking, diets of participant and the date.</string>
    <string name="helpDialogMsgRules">On this page you can read all the agreed upon rules, these rules are taken from a google docs in the kitchen drive, and should be edited there. To change the rules, this needs to be discussed at a kitchen meeting.</string>
    <string name="helpDialogMsgResident">On this page you can get an overview of all the residents. Here you can see photos, birthdays and diets of the people living at the kitchen.
 Click on the arrow to expand the resident view and see the details of the chosen resident.</string>
    <string name="helpDialogMsgMeetings">On this page you can view and add topic you would like to dicuss on the next kitchen meeting. Click the X to delte a topic, the arrow to show a desription or add to create a new one.
 This page is not done, and will be exteended with summary of the meetings as well as overview of pcomming meetings and participants.</string>
    <string name="helpDialogMsgInventory">On this page you can get an overview of all the grocery what needs to be bought. Here you can add items to the list just click the + button.
 Click the X to remove an item.</string>
    <string name="helpDialogMsgGrocery">On this page you can get an overview of all the grocery what needs to be bought.
Here you can add items to the list just click the + button.
Click the X to remove an item.</string>
    <string name="helpDialogMsgSum">On this page you can get an overview of all the kitchen documents. Most importantly, you will have easy acces to the meeting agendas. just click on a file in the list.</string>


    <string name="title_activity_sign_up_picture">Sign in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="and"><![CDATA[&]]></string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">3361771690588285</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb3361771690588285</string>


    <!--  Auth -->
    <string name="auth_failed">Authentication failed</string>

    <string-array name="spinner_colors">
        <item>Event type</item>
        <item>Book kitchen</item>
        <item>Social event</item>
    </string-array>

    <string-array name="spinner_notification">
        <item>No notification</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>1 time</item>
        <item>2 timer</item>
        <item>24 timer</item>
    </string-array>

    <string-array name="spinner_reapets">
        <item>Does not repeat</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every year</item>
    </string-array>

    <string name="bottom_app_bar_compatibility_fragment">BottomAppBar Compatibility</string>
    <string name="bottom_app_bar_compatibility_fragment_info">
        Below we see the ExpandableFab working with the BottomAppBar, right out of the box.\n\nFor
        developers using a BottomAppBar with different ExpandableFabs in portrait and landscape
        (like this example): see the code in this fragment for a simple runtime anchor trick. Turn
        your device to landscape to see how it works.\n\nTo have the Overlay cover the BottomAppBar,
        define the Overlay AFTER the BottomAppBar in your \'ExpandableFabLayout\'.
    </string>
    <string name="clcf_snackbar_above_efab">Display Snackbar above ExpandableFab</string>
    <string name="clcf_snackbar_below_efab">Display Snackbar below ExpandableFab</string>
    <string name="snackbar_compatibility_fragment_info">
        \'ExpandableFabLayout\' is the parent of every view in the ExpandableFab widget. It derives
        from CoordinatorLayout, meaning it can play nicely with many of the new Material Design
        behaviors, views and animations.\n\nClick the buttons below to see the widget interact with
        a \'Snackbar\' for instance.
    </string>

</resources>