<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/inventory_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/more_button"
        android:drawableBottom="@drawable/icon_document"
        android:drawablePadding="0dp"
        android:elevation="10dp"
        android:paddingHorizontal="5dp"
        android:paddingBottom="5dp"

        android:text="@string/title_doc"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/residents_button"
        app:layout_constraintTop_toBottomOf="@+id/residents_button" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/more_button"
        android:drawableBottom="@drawable/profile_cloud"
        android:drawablePadding="0dp"
        android:elevation="10dp"
        android:paddingHorizontal="5dp"
        android:paddingBottom="5dp"
        android:text="@string/title_profile"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/rules_button"
        app:layout_constraintTop_toTopOf="@+id/inventory_button" />

    <Button
        android:id="@+id/residents_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/more_button"
        android:drawableBottom="@drawable/residents_icon"
        android:drawablePadding="0dp"
        android:elevation="10dp"
        android:paddingBottom="5dp"
        android:text="Residents"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/meeting_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/meeting_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/more_button"
        android:drawableBottom="@drawable/day_view"
        android:drawablePadding="0dp"
        android:elevation="10dp"
        android:paddingBottom="5dp"
        android:text="@string/title_meeting"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/residents_button"
        app:layout_constraintEnd_toStartOf="@+id/cleaning_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cleaning_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/more_button"
        android:drawableBottom="@drawable/cleaning_icon"
        android:drawablePadding="0dp"
        android:elevation="10dp"
        android:paddingHorizontal="5dp"
        android:paddingBottom="5dp"
        android:text="@string/title_cleaning"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/meeting_button"
        app:layout_constraintTop_toTopOf="@+id/meeting_button" />

    <Button
        android:id="@+id/rules_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/more_button"
        android:drawableBottom="@drawable/cloud_icon_rules"
        android:drawablePadding="0dp"
        android:elevation="10dp"
        android:paddingBottom="5dp"
        android:text="@string/title_rules"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/cleaning_button"
        app:layout_constraintTop_toTopOf="@+id/residents_button" />


</androidx.constraintlayout.widget.ConstraintLayout>